# ESP32-Modbus-Logger

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: main.rs  wifi.rs
src/alert/: mod.rs  smtp.rs
src/logger/: dashboard.rs  file_logger.rs  mod.rs
src/modbus/: mod.rs  rtu.rs  tcp.rs
website/: app.js  index.html  style.css
